--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,20 +11,29 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
+
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Build Docker Image
         run: docker build -t rahulmali8827/reactjs-app .
-      - name: Publish image to docker hub
-        run: docker push rahulmali8827/reactjs-app:latest   
 
-  deploy: 
+      - name: Publish Image to Docker Hub
+        run: docker push rahulmali8827/reactjs-app:latest
+
+  deploy:
     needs: build
-    runs-on: aws-ec2    
+    runs-on: ubuntu-latest
     steps:
-      - name: Pull image from docker hub
-        run: docker pull rahulmali8827/reactjs-app:latest 
-      - name: Delete Old Container
-        run: docker rm -f reactContainer
-      - name: Run docker container
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Pull Image from Docker Hub
+        run: docker pull rahulmali8827/reactjs-app:latest
+
+      - name: Delete Old Container (if exists)
+        run: |
+          docker rm -f reactContainer || echo "No existing container to delete"
+
+      - name: Run Docker Container
         run: docker run -d -p 3000:80 --name reactContainer rahulmali8827/reactjs-app
