--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,29 +11,20 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
-
       - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build Docker Image
         run: docker build -t rahulmali8827/reactjs-app .
-
       - name: Publish Image to Docker Hub
         run: docker push rahulmali8827/reactjs-app:latest
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: aws-ec2
     steps:
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
       - name: Pull Image from Docker Hub
         run: docker pull rahulmali8827/reactjs-app:latest
-
       - name: Delete Old Container (if exists)
-        run: |
-          docker rm -f reactContainer || echo "No existing container to delete"
-
+        run: docker rm -f reactContainer
       - name: Run Docker Container
         run: docker run -d -p 3000:80 --name reactContainer rahulmali8827/reactjs-app
